import React from 'react';
import Header from '../Header';
import renderToJson from './utils/render-to-json';

describe('header', () => {
  beforeAll(() => {
    process.env.baseURL = '/';
    window.configuration = { markdown: [] };
  });

  test('renders title', () => {
    expect(renderToJson(<Header title="Super Cool Docs" />)).toMatchSnapshot();
  });

  test('renders githubURL', () => {
    expect(
      renderToJson(<Header githubURL="https://github.com/sindresorhus/cows" />)
    ).toMatchSnapshot();
  });

  test('renders logo', () => {
    expect(
      renderToJson(<Header logo="https://github.com/sindresorhus/cows" />)
    ).toMatchSnapshot();
  });

  test('renders nav items', () => {
    expect(
      renderToJson(
        <Header
          location={{ hash: '', search: '', pathname: '/' }}
          navItems={{
            root: '/',
            'Doc 1': '/',
            'Doc 2': 'pages'
          }}
        />
      )
    ).toMatchSnapshot();
  });

  test('renders nav items with just a index', () => {
    process.env.index = 'index.md';
    expect(
      renderToJson(
        <Header
          location={{ hash: '', search: '', pathname: '/foo' }}
          navItems={{
            root: '/',
            'Doc 1': 'other/index.md',
            'Doc 2': 'pages'
          }}
        />
      )
    ).toMatchSnapshot();
  });

  test('render active for blogs', () => {
    window.configuration = { markdown: ['/blog/page.md'] };
    expect(
      renderToJson(
        <Header
          location={{ hash: '', search: '', pathname: '/blog/page.md' }}
        />
      )
    ).toMatchSnapshot();
  });
});
